recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: ':' expected but '(' found.
current(steps) 
       ^Tree:13: error: identifier expected but '}' found.
} 
^