recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
def subtree( 
current(steps) 
avance(length)
droite(angle)	
tree(steps-1, length*shrink, angle:Double, shrink:Double)
gauche(2*angle)
tree(steps-1, length*shrink, angle:Double, shrink:Double)
current(steps)
droite(angle)
recule(steps)
}